--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
     <title>Sliceart Starter Kit</title>
   </head>
   <body>
-    <h1>Here is Sliceart Starter Kit</h1>
+    <div class="container">
+      <h1>Here is Sliceart Starter Kit</h1>
+    </div>
     <script src="bundle.js"></script>
   </body>
 </html>
