Add table structure for the users data

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,19 @@
   </head>
   <body>
     <div class="container">
-      <h1>Here is Sliceart Starter Kit</h1>
+      <h1>Users</h1>
+      <table>
+        <thead>
+          <tr>
+            <th>&nsbp;</th>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+          </tr>
+        </thead>
+        <tbody id="users"></tbody>
+      </table>
     </div>
     <script src="bundle.js"></script>
   </body>
