--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       <table>
         <thead>
           <tr>
-            <th>&nsbp;</th>
+            <th>&nbsp;</th>
             <th>Id</th>
             <th>First Name</th>
             <th>Last Name</th>
